crates/monochange/tests/snapshots/cli_main_binary__monochange_binary_accepts_equals_format_flags.snap
---
source: crates/monochange/tests/cli_main_binary.rs
info:
  program: monochange
  args:
    - step
    - run
    - discover
    - "--format=json"
  env:
    MONOCHANGE_NO_PROGRESS: "1"
    NO_COLOR: "1"
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error[cli.usage]: unrecognized subcommand 'run'

Usage: monochange step [OPTIONS] <COMMAND>

For more information, try '--help'.

  command: monochange step run
