crates/monochange/tests/snapshots/cli_main_binary__monochange_binary_prints_help.snap
---
source: crates/monochange/tests/cli_main_binary.rs
info:
  program: monochange
  args:
    - "--help"
  env:
    MONOCHANGE_NO_PROGRESS: "1"
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
monochange discovers packages across Cargo, npm/pnpm/Bun, Deno, Dart/Flutter, Python, and Go, then coordinates version bumps, changelogs, and release automation from a single monochange.toml config.

Usage: monochange [OPTIONS] <COMMAND>

Release Commands:
  next       Show the next version for each release group and package without writing files
  create     Create a changeset file for one or more packages
  preview    Preview planned version bumps, changelogs, and release artifacts without writing files
  prepare    Prepare version bumps, changelogs, and release artifacts
  publish    Publish packages and inspect registry publishing state
  affected   Evaluate affected packages and changeset coverage
  diagnose   Inspect changeset provenance and review metadata

Workspace Commands:
  init       Generate monochange.toml with detected packages, groups, and default CLI commands
  populate   Add any missing built-in CLI commands to monochange.toml so you can customize them
  discover   Discover packages across supported ecosystems
  config     Render resolved monochange configuration and workspace metadata
  check      Validate configuration, changesets, and run manifest lint rules
  versions   List package and group versions or sync internal dependency constraints
  lint       Inspect and scaffold manifest lint rules
  migrate    Audit or migrate release metadata for monochange repositories

Change Analysis Commands:
  change     Determine the release severity of repository changes
  changeset  Inspect and validate pending changeset intent
  api        Inspect lower-level API diffs
  analyze    Analyze semantic changes for one package across main, head, and optional release baselines
  notes      Render one configured release-note output without modifying release files

Automation Commands:
  run        Run workflow commands defined in monochange.toml
  step       Run built-in release workflow steps
  command    Open an interactive dashboard for adding or editing config-defined CLI commands
  mcp        Start the monochange MCP (Model Context Protocol) server over stdin/stdout
  skill      Read or install the bundled monochange agent skill
  subagents  Generate repo-local monochange subagents and agent guidance files
  snapshot   Print a normalized JSON snapshot of the CLI surface
  help       Show detailed help for a command

Options:
  -q, --quiet
          Suppress result, progress, and diagnostic output without changing execution

  -v, --verbose
          Show full result lists and logs, every step timing, and progress notes

      --progress-format <FORMAT>
          Control progress output on stderr
          
          [possible values: auto, unicode, ascii, json]

      --jq <EXPRESSION>
          Filter explicit JSON output; requires `--format json` or `--format json-min`

      --snapshot
          Print a normalized JSON snapshot for this command subtree

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version

Quick Start

1. Create or update monochange.toml for your workspace:

  monochange init

2. Validate configuration and changeset targets before making release changes:

  monochange step validate

3. Inspect detected package ids and groups when authoring changesets or workflow inputs:

  monochange step discover --format json

4. Check what the next version will be before preparing a release. This reads pending changesets and writes nothing:

  monochange next
  monochange next --format json

5. Run repository-defined workflows as monochange <command> (or monochange run <command>, which also works when a built-in command shares the name), or call immutable built-in steps directly with monochange step <name>.

6. Preview before mutating files, publishing packages, creating tags, or opening release requests:

  monochange run release --dry-run --diff
  monochange step prepare-release --dry-run --diff

Run monochange help <command> or monochange help step <name> for command-specific options.


----- stderr -----
