crates/monochange/tests/snapshots/cli_main_binary__monochange_binary_renders_cli_errors.snap
---
source: crates/monochange/tests/cli_main_binary.rs
info:
  program: monochange
  args:
    - not-a-command
  env:
    MONOCHANGE_NO_PROGRESS: "1"
    NO_COLOR: "1"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error[cli.usage]: unrecognized subcommand 'not-a-command'

Usage: monochange [OPTIONS] <COMMAND>

For more information, try '--help'.

  command: monochange not-a-command
